RESOLVED FIXED285106
REGRESSION (286777@main): [iOS] Crash when tapping on date input on devices with 12-hour time
https://bugs.webkit.org/show_bug.cgi?id=285106
Summary REGRESSION (286777@main): [iOS] Crash when tapping on date input on devices w...
Aditya Keerthi
Reported 2024-12-23 09:52:59 PST
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-23 09:53:09 PST
Aditya Keerthi
Comment 2 2024-12-23 09:53:55 PST
EWS
Comment 3 2024-12-23 14:31:10 PST
Committed 288258@main (8af24b25e9e2): <https://commits.webkit.org/288258@main> Reviewed commits have been landed. Closing PR #38338 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.