REGRESSION (286777@main): [iOS] Crash when tapping on date input on devices with 12-hour time https://bugs.webkit.org/show_bug.cgi?id=285106 rdar://141879717

Reviewed by Richard Robinson.

286777@main introduced a new use of `NSDateFormatter` in the date picker
initialization path. This formatter did not specify a locale, but used a
format string with 24-hour time.

When working with fixed format dates, the `locale` property should be a POSIX
locale, and the `timeZone` property should be UTC, as described in
https://developer.apple.com/documentation/foundation/nsdateformatter.

Without specifying the aforementioned properties, `dateFromString:` may return
`nil`. A crash would then be encountered when creating an `NSDateInterval` with
a `nil` end date.

No new tests. This issue is reproducible when setting `AppleICUForce12HourTime`
to `YES` in the global domain. However, the preference must be set prior to
process launch, which is not possible when writing an API test. Additionally,
it is not desirable to set this bit for all tests.

* Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm:
(-[WKDateTimePicker initWithView:inputType:]):

Canonical link: https://commits.webkit.org/288258@main